--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/janaf
 spring.datasource.username=janaf
 spring.datasource.password=password
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql = true
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.sql-script-encoding=UTF-8
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=MYSQL
 
