登録元素一覧表追加対応

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.database=MYSQL
+spring.mvc.favicon.enabled=false
 
 spring.thymeleaf.cache=false
