元素詳細情報一覧、元素熱化学情報一覧画面追加対応

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/janaf
+spring.datasource.url=jdbc:mysql://localhost:3306/janaf?characterEncoding=UTF-8
 spring.datasource.username=janaf
 spring.datasource.password=password
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
