--- a/pom.xml
+++ b/pom.xml
@@ -99,14 +99,14 @@
             <version>0.32</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>momentjs</artifactId>
+            <version>2.18.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>21.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.darrachequesne</groupId>
-            <artifactId>spring-data-jpa-datatables</artifactId>
-            <version>4.1</version>
         </dependency>
     </dependencies>
 
