--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql
+    user: "1000:50" # https://github.com/docker-library/mysql/issues/219
     volumes:
       - ./mysql:/var/lib/mysql
     environment:
