--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,7 +1,7 @@
 spring:
   profiles: production
   datasource:
-    url: jdbc:mysql://mysql:3306/janaf
+    url: jdbc:mysql://localhost:3306/janaf
     username: janaf
     password: password
     driverClassName: com.mysql.jdbc.Driver
