--- a/pom.xml
+++ b/pom.xml
@@ -103,9 +103,19 @@
             <version>2.18.1</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>tether</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>amcharts</artifactId>
+            <version>3.20.13-1</version>
         </dependency>
     </dependencies>
 
