--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     user: "1000:50" # https://github.com/docker-library/mysql/issues/219
     volumes:
       - ./mysql:/var/lib/mysql
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_ROOT_PASSWORD: mysql@localhost
@@ -20,7 +22,7 @@ services:
     image: y-ok/janaf-web
     container_name: janaf-web-development
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: development
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/janaf
@@ -34,7 +36,7 @@ services:
     image: y-ok/janaf-web
     container_name: janaf-web-product
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: production
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/janaf
